--- a/patient/templates/patient/patient_login.html
+++ b/patient/templates/patient/patient_login.html
@@ -1,16 +1,29 @@
 {% extends 'patient/layout.html' %}
 {% block body %}
     <h1>This is login page</h1>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <form method="POST" action="{% url 'patient:patient_login' %}">
+    {% csrf_token %}
     <div class="mb-3">
         <label for="emailInput" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="emailInput" name="email">
+        <input type="email" class="form-control" id="emailInput" name="email" required>
     </div>
     <div class="mb-3">
         <label for="passwordInput" class="form-label">Password</label>
-        <input type="password" class="form-control" id="passwordInput" name="password">
+        <input type="password" class="form-control" id="passwordInput" name="password" required>
     </div>
-    
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="mb-3 text-center">
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+    <a href="{% url 'patient:patient_register' %}">Don't have an account? Register Here</a>
     </form>
 {% endblock%}
