--- a/appointment/templates/appointment/patient_view_availability.html
+++ b/appointment/templates/appointment/patient_view_availability.html
@@ -13,7 +13,7 @@
         <div class="col-md-6">
             <h4>Dr. {{ doctor_info.fname }} {{ doctor_info.lname }}</h4>
             <p><strong>Department:</strong> {{ doctor_info.department.dep_name }}</p>
-            <p><strong>Specialization:</strong> {{ doctor_info.specialization }}</p>
+            <p><strong>Specialization:</strong> {{ doctor_info.specialisation }}</p>
             <p><strong>Phone:</strong> {{ doctor_info.phone }}</p>
         </div>
     </div>
