--- a/appointment/templates/appointment/base.html
+++ b/appointment/templates/appointment/base.html
@@ -48,7 +48,7 @@
     {% endif %}
 
     <!-- Patient Navigation Bar -->
-     {% if patient %}
+    {% if patient %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
             <a class="navbar-brand" href="{% url 'appointment:search_doctors' %}">
@@ -79,7 +79,7 @@
                             <i class="fas fa-user"></i> {{ patient.fname }} {{ patient.lname }}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" onclick="alert('Profile settings coming soon')">
+                            <li><a class="dropdown-item" href="{% url 'patient:patient_profile' %}" onclick="alert('Go to Profile Settings')">
                                 <i class="fas fa-user-edit"></i> Profile Settings
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -94,6 +94,7 @@
     </nav>
     {% endif %}
     
+    <!-- Error Message -->
     <div class="container mt-3">
         {% for message in messages %}
         {% if message.tags == 'success' %}
