--- a/patient/templates/patient/patient_profile.html
+++ b/patient/templates/patient/patient_profile.html
@@ -3,15 +3,15 @@
 {% block body %}
 <div class="row justify-content-center align-items-center">
 <div class="profile-info border m-3 p-3">
-    <h3>Profile Settings</h3>
+    <h3>Personal Information</h3>
         <ul>
-            <li>Name: <strong>{{fname}} {{lname}}</strong>  </li>
-            <li>Email: <strong>{{email}}</strong></li>
-            <li>DOB: {{date_of_birth}}</li>
-            <li>Gender: {{gender}}</li>
-            <li>Marital Status: {{marital_status}}</li>
-            <li>Phone: {{phone}}</li>
-            <li class="mb-2">Address: {{address}}</li>
+            <li><strong>Name</strong>: {{fname}} {{lname}} </li>
+            <li><strong>Email</strong>: {{email}}</li>
+            <li><strong>DOB</strong>: {{date_of_birth}}</li>
+            <li><strong>Gender</strong>: {{gender}}</li>
+            <li><strong>Marital Status</strong>: {{marital_status}}</li>
+            <li><strong>Phone</strong>: {{phone}}</li>
+            <li class="mb-2"><strong>Address</strong>: {{address}}</li>
             <li><small>Registeration Date: {{created_at}} </small></li>
             <li><small>Updated Date: {{updated_at}}</small></li>
         </ul>
