--- a/nurse/templates/nurse/layout.html
+++ b/nurse/templates/nurse/layout.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="container">
+    <div class="container mt-3">
         {% block content %}
         {% endblock %}
     </div>
