--- a/nurse/templates/nurse/nurse_login.html
+++ b/nurse/templates/nurse/nurse_login.html
@@ -1,9 +1,9 @@
-{% extends 'doctor/base.html' %}
+{% extends 'nurse/layout.html' %}
 {% block content %}
     <div class="row border border-3 p-3 rounded">
 
-    <h1 class="text-center">Doctor Login</h1>
-    <form method="POST" action="{% url 'doctor:doctor_login' %}">
+    <h1 class="text-center">Nurse Login</h1>
+    <form method="POST" action="{% url 'nurse:nurse_login' %}">
         {% csrf_token %}
         <div class="mb-3">
             <label for="loginEmail" class="form-label">Email address</label>
