--- a/triage/templates/triage/show_appointments.html
+++ b/triage/templates/triage/show_appointments.html
@@ -1,31 +1,31 @@
 {% extends 'triage/layout.html' %}
 {% block content %}
-    <h2>Department: </h2> 
-    Appointments
-        <ul class="list-group">
+    <h2>{{ nurse.department }}</h2>
+    <h3>Nurse: <strong>{{ nurse }}</strong></h3> 
+    <h5>Appointments</h5>
+        <div class="row">
             {% for appointment in appointments %}
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="list-text">
-                    Appointment ID: {{ appointment.id }} <br/>
-                    Appointed Date: {{ appointment.appointed_datetime }} <br/>
-                    Patient ID: {{ appointment.patient_id }}<br/>
-                    Patient Name: {{ appointment.patient }}<br/>
-                    Doctor Name: {{ appointment.doctor }}<br/>
-                    <a href="" class="btn btn-primary">Fill Triage</a>
-                    
-                    <!-- <div class="list-button">
-                        {% if appt.status in 'pending,confirmed' and appt.is_cancellable %}
-                            <a href="{% url 'appointment:cancel_appointment' appt.id %}" 
-                               class="btn btn-outline-danger btn-sm">Cancel Appointment</a>
-                        {% elif appt.status in 'pending,confirmed' and not appt.is_cancellable %}
-                            <small class="text-muted">Cannot cancel<br>(less than 2 days)</small>
-                        {% endif %}
-                    </div> -->
-                    </div>
-            </li>
-            {% empty %}
-            <li class="list-group-item">No available appointment</li>
-            {% endfor %}
+            <div class="card-items col-lg-6 mb-3">                  
+                <div class="card border border-success">
+                    <div class="card-body">
+                        Appointment ID: {{ appointment.id }} <br/>
+                        Appointed Date: {{ appointment.appointed_datetime }} <br/>
+                        Patient ID: {{ appointment.patient_id }}<br/>
+                        Patient Name: {{ appointment.patient }}<br/>
+                        Doctor Name: {{ appointment.doctor }}<br/>
 
-        </ul>
+                        <div class="control-buttons mt-2">
+                            <a href="{% url 'triage:fill_triage' appointment.id %}" class="btn btn-primary">Fill Triage</a>
+                            <a href="" class="btn btn-danger">Remove</a>             
+                        </div>
+                            
+                    </div>
+                </div>
+            </div>
+
+            {% empty %}
+            <p>No available appointment</p>              
+            {% endfor %}
+        </div>
+
 {% endblock %}
